--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "^0.70.6",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.3.1",
     "eslint": "^7.32.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
   },
