--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "^0.70.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
   },
